--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 		<link rel="stylesheet" href="css/main.css">
 
 
@@ -27,6 +29,49 @@
 				<li><a href="#">DOWNLOAD</a></li>
 			</ul>
 		</div>
+		<div class="middle">
+			<h1>Introducing  <span>Pico.</span></h1>
+			<h2>A stupidly simple <span>&</span> blazing fast, flat file CMS.<br> Making the web easy.</h2>
+			<button>Download Now</button>
+		</div>
+		<section class="boxes">
+			<div>
+				<i class="fas fa-thumbs-up"></i>
+				<h1>Stupidly Simple</h1>
+				<p>Pico makes creating and maintaining a website <br>
+				as simple as editing text files.</p>
+			</div>
+			<div>
+				<i class="fas fa-tachometer-alt"></i>
+				<h1>Blazing Fast</h1>
+				<p>Pico is seriously lightweight and doesn't use a<br>
+				database, making it super fast.</p>
+			</div>
+			<div>
+				<i class="fas fa-database"></i>
+				<h1>No Database</h1>
+				<p>Pico is a "flat file" CMS, meaning no database woe's. <br>
+				no MySQL queries, nothing.</p>
+			</div>
+			<div>
+				<i class="fa fa-font fa-4x"></i>
+				<h1>Markdown Formatting</h1>
+				<p>Edit your website in your favorite text editor using<br>
+				simple Markdown formatting</p>
+			</div>
+			<div>
+				<i class="fas fa-paint-brush"></i>
+				<h1>Twig Templates</h1>
+				<p>Pico uses the Twig templating engine, for powerful<br> 
+				and flexible themes</p>
+			</div>
+			<div>
+				<i class="fas fa-code-branch"></i>
+				<h1>Open Source</h1>
+				<p>Pico is completely free and open source, released <br>
+				under the MIT license</p>
+			</div>
+		</section>
 
 
 
